# bazel-gazelle

./: WORKSPACE  go.mod  link_generated_go.sh
cmd/gazelle/: BUILD.bazel
internal/: BUILD.bazel  go_repository_cache.bzl
internal/language/typescript/: BUILD.bazel  config.go  constants.go  fileinfo.go  fileinfo_test.go  fix.go  generate.go  generate_test.go  kinds.go  lang.go  package.go  resolve.go  resolve_test.go
internal/merger/: BUILD.bazel  merger_test.go
language/: BUILD.bazel
language/go/: BUILD.bazel
language/rosetta/: BUILD.bazel  lang.go
language/rosetta/internal/testdriver/: BUILD.bazel  main.go
language/rosetta/proto/: BUILD.bazel  rosetta_protocol.pb.go  rosetta_protocol.proto
testing/: BUILD.bazel
testing/typescript/: BUILD.in  main.ts
testing/typescript/foo/: BUILD.in
