load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rosetta",
    srcs = ["lang.go"],
    data = ["//language/rosetta/internal/testdriver"],
    importpath = "github.com/bazelbuild/bazel-gazelle/language/rosetta",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//label",
        "//language",
        "//language/rosetta/proto",
        "//repo",
        "//resolve",
        "//rule",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

go_test(
    name = "rosetta_test",
    srcs = ["generate_test.go"],
    data = ["//language/rosetta/testdata:all_files"],
    embed = [":rosetta"],
    deps = [
        "//config",
        "//language",
        "//merger",
        "//resolve",
        "//rule",
        "//testtools",
        "//walk",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "generate_test.go",
        "lang.go",
        "//language/rosetta/internal:all_files",
        "//language/rosetta/proto:all_files",
        "//language/rosetta/testdata:all_files",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":rosetta",
    visibility = ["//visibility:public"],
)
