load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "testdriver_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/bazel-gazelle/language/rosetta/internal/testdriver",
    visibility = ["//visibility:private"],
    deps = [
        "//language/rosetta/proto",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
    ],
)

go_binary(
    name = "testdriver",
    embed = [":testdriver_lib"],
    visibility = ["//language/rosetta:__subpackages__"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "main.go",
    ],
    visibility = ["//visibility:public"],
)
